[gd_scene format=3 uid="uid://cq0uplsomgf1v"]

[ext_resource type="FontFile" uid="uid://dv5gofkx77peh" path="res://Graphics/PlaceholderSource/Dungeon Mode Font/dungeon-mode.ttf" id="1_3l5it"]
[ext_resource type="Script" uid="uid://8ydj2bjd1wqa" path="res://Scripts/MainMenu/options_menu.gd" id="1_pnmk5"]
[ext_resource type="Texture2D" uid="uid://c376h7t33pa0t" path="res://Graphics/PlaceholderSource/Kenny Art/Fantasy UI/Default/Panel/panel-003.png" id="2_pnmk5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fvvvu"]
content_margin_left = 26.0
content_margin_top = 18.0
content_margin_right = 26.0
content_margin_bottom = 18.0
texture = ExtResource("2_pnmk5")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_07i5k"]
load_path = "res://.godot/imported/panel-003.png-2da624981b42830125a8f21c4185f849.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k7suw"]
content_margin_left = 26.0
content_margin_top = 18.0
content_margin_right = 26.0
content_margin_bottom = 18.0
texture = SubResource("CompressedTexture2D_07i5k")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
modulate_color = Color(0.4109551, 0.15690279, 0.36061883, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u6jki"]
content_margin_left = 26.0
content_margin_top = 18.0
content_margin_right = 26.0
content_margin_bottom = 18.0
texture = ExtResource("2_pnmk5")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
modulate_color = Color(0.31907254, 0.33031124, 0.5477941, 1)

[node name="OptionsMenu" type="Control" unique_id=2034364420]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pnmk5")

[node name="OptionsMenuElements" type="VBoxContainer" parent="." unique_id=955791380]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenuElements" unique_id=630272125]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32

[node name="TabContainer" type="TabContainer" parent="OptionsMenuElements/MarginContainer" unique_id=1731848358]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
current_tab = 0

[node name="Graphics" type="TabBar" parent="OptionsMenuElements/MarginContainer/TabContainer" unique_id=336641057]
layout_mode = 2
metadata/_tab_index = 0

[node name="Resolution" type="HBoxContainer" parent="OptionsMenuElements/MarginContainer/TabContainer/Graphics" unique_id=1739133819]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="OptionsMenuElements/MarginContainer/TabContainer/Graphics/Resolution" unique_id=1206555094]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3l5it")
text = "Resolution:"

[node name="Options" type="OptionButton" parent="OptionsMenuElements/MarginContainer/TabContainer/Graphics/Resolution" unique_id=881811997]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3l5it")
selected = 0
item_count = 2
popup/item_0/text = "1080"
popup/item_0/id = 0
popup/item_1/text = "4k"
popup/item_1/id = 1

[node name="Accessability" type="TabBar" parent="OptionsMenuElements/MarginContainer/TabContainer" unique_id=561067974]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenuElements/MarginContainer/TabContainer/Accessability" unique_id=899832574]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CheckBox" type="CheckBox" parent="OptionsMenuElements/MarginContainer/TabContainer/Accessability/VBoxContainer" unique_id=570976123]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3l5it")
text = "Accessible"

[node name="Audio" type="TabBar" parent="OptionsMenuElements/MarginContainer/TabContainer" unique_id=996045466]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenuElements/MarginContainer/TabContainer/Audio" unique_id=492725900]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenuElements/MarginContainer/TabContainer/Audio/VBoxContainer" unique_id=1560849626]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenuElements/MarginContainer/TabContainer/Audio/VBoxContainer/HBoxContainer" unique_id=1577811126]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3l5it")
text = "Master sound:"

[node name="MasterVolume" type="HSlider" parent="OptionsMenuElements/MarginContainer/TabContainer/Audio/VBoxContainer/HBoxContainer" unique_id=672786925]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0

[node name="Controls" type="TabBar" parent="OptionsMenuElements/MarginContainer/TabContainer" unique_id=1915585241]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenuElements/MarginContainer/TabContainer/Controls" unique_id=998334782]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenuElements/MarginContainer/TabContainer/Controls/VBoxContainer" unique_id=902354416]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenuElements/MarginContainer/TabContainer/Controls/VBoxContainer/HBoxContainer" unique_id=1959084963]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3l5it")
text = "Configuration name:"

[node name="Configuration" type="LineEdit" parent="OptionsMenuElements/MarginContainer/TabContainer/Controls/VBoxContainer/HBoxContainer" unique_id=1832641264]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3l5it")
text = "NewControll"
placeholder_text = "w=Forward"
max_length = 100
expand_to_text_length = true

[node name="GoBack" type="Button" parent="OptionsMenuElements" unique_id=396238013]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3l5it")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_fvvvu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k7suw")
theme_override_styles/hover = SubResource("StyleBoxTexture_u6jki")
text = "Go back"

[connection signal="button_up" from="OptionsMenuElements/GoBack" to="." method="_on_go_back_button_up"]
